<resources>
    <string name="app_name">JoinMeet</string>
    <string name="melding_tittle">Melding</string>
    <string name="sms_tittle">SMS tillatelse</string>
    <string name="sms_boks">Slå på SMS</string>
    <string name="notification">Notifikasjon</string>
    <string name="velgTid">Velg tid:</string>

    <string name="møtenavn">Møte tittel</string>
    <string name="Type">Type: </string>
    <string name="Sted">Sted: </string>
    <string name="Dato">Dato: </string>
    <string name="Tid">Tid: </string>
    <string name="Add_Personer">Legg til personer</string>
    <string name="Add_Person">Legg til person</string>
    <string name="PersonerImøtet">Personer:</string>
    <string name="slettBekrftelse">Er du sikker at du vil slette den?</string>
    <string name="Slett">Slett</string>
    <string name="Avbryt">Avbryt</string>
    <string name="Navn">Navn</string>
    <string name="Tel">Tel</string>
    <string name="telefon">Tel: </string>
    <string name="klikk">Klikk her</string>
    <string name="Lagre">Lagre</string>

    <!-- Feil melding -->
    <string name="fylleNavn">Du må fylle møte navn!</string>
    <string name="fylleType">Du må fylle typen!</string>
    <string name="fylleSted">Du må fylle sted</string>
    <string name="fylleDato">Du må fyle dato</string>
    <string name="fylleTid">Du må fyle tid</string>
    <string name="barebokstav">Bruk bare bokstaver</string>
    <string name="forlangtmøtenavn">"Navnet for møtet er  for langt!"</string>
    <string name="forlangtType">"Navnet på type er  for langt!"</string>
    <string name="forlangtStedet">"Navnet for stedet er langt!"</string>
    <string name="hello_blank_fragment">Klikk på en møte for endre eller legger til personer til møtet</string>


</resources>