<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#276281"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/slettBekrftelse"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:drawableRight="@drawable/ic_slette"
            android:text="@string/Slett"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/dialog_ikke"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:drawableRight="@drawable/avbryt"
            android:text="@string/Avbryt"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:src="@drawable/meeting"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp" />

</RelativeLayout>