<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8fa9ac"
    android:orientation="vertical"
    tools:context=".Activity.MoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:popupTheme="@color/colorPrimaryDark">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@color/colorPrimaryDark">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f6f5e7"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/mote_rom"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/navn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/møtenavn"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/type"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/type1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Type"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/sted"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sted1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Sted"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    app:errorEnabled="true"
                    app:startIconCheckable="false"
                    app:startIconDrawable="@drawable/dato"
                    app:startIconTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dato1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:hint="@string/Dato" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    app:errorEnabled="true"
                    app:startIconCheckable="false"
                    app:startIconDrawable="@drawable/tid"
                    app:startIconTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tid1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:hint="@string/Tid" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_personer"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/Add_Personer">

            </com.google.android.material.button.MaterialButton>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/PersonerImøtet"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_view"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>